[gd_scene load_steps=25 format=3 uid="uid://d232aelykr372"]

[ext_resource type="Script" path="res://Opossum.gd" id="1_b5c41"]
[ext_resource type="Texture2D" uid="uid://bdd8dg6qy00wp" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-1.png" id="1_lwq6t"]
[ext_resource type="Texture2D" uid="uid://di2num5i4cpc6" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-2.png" id="2_oaa2a"]
[ext_resource type="Texture2D" uid="uid://bnwe8y5yidx1o" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-1.png" id="2_x6xiq"]
[ext_resource type="Texture2D" uid="uid://t0x4xu2df0bj" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-3.png" id="3_cuj4i"]
[ext_resource type="Texture2D" uid="uid://myynqhqwaro3" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-2.png" id="3_thlfa"]
[ext_resource type="Texture2D" uid="uid://cet33x58xhawt" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-3.png" id="4_hgd1a"]
[ext_resource type="Texture2D" uid="uid://bwdoqoskc5fcy" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-4.png" id="4_uf1my"]
[ext_resource type="Texture2D" uid="uid://cbi3jh7tqj7so" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-4.png" id="5_ayj3g"]
[ext_resource type="Texture2D" uid="uid://dhy4mbdjpq1k1" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-5.png" id="5_yf2aa"]
[ext_resource type="Texture2D" uid="uid://b2a2uoj3ivt66" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-6.png" id="6_kcuve"]
[ext_resource type="Texture2D" uid="uid://cmgl2u7elxs7n" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-5.png" id="6_v7j4m"]
[ext_resource type="Texture2D" uid="uid://ron0cdgx6l1r" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-6.png" id="7_5hvbm"]
[ext_resource type="Texture2D" uid="uid://c3a2bnmm3kh5t" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/respawn/respawn-1.png" id="14_q4kul"]
[ext_resource type="Texture2D" uid="uid://cndweoq2paq0l" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/respawn/respawn-2.png" id="15_rckhd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km28n"]
size = Vector2(26, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_ui2a7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x6xiq")
}, {
"duration": 1.0,
"texture": ExtResource("3_thlfa")
}, {
"duration": 1.0,
"texture": ExtResource("4_hgd1a")
}, {
"duration": 1.0,
"texture": ExtResource("5_ayj3g")
}, {
"duration": 1.0,
"texture": ExtResource("6_v7j4m")
}, {
"duration": 1.0,
"texture": ExtResource("7_5hvbm")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lwq6t")
}, {
"duration": 1.0,
"texture": ExtResource("2_oaa2a")
}, {
"duration": 1.0,
"texture": ExtResource("3_cuj4i")
}, {
"duration": 1.0,
"texture": ExtResource("4_uf1my")
}, {
"duration": 1.0,
"texture": ExtResource("5_yf2aa")
}, {
"duration": 1.0,
"texture": ExtResource("6_kcuve")
}],
"loop": true,
"name": &"patrol",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_q4kul")
}, {
"duration": 1.0,
"texture": ExtResource("15_rckhd")
}],
"loop": true,
"name": &"respawn",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_2ykcd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"patrol"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5saes"]
resource_name = "death"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_18odg"]
resource_name = "patrol"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"patrol"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_k1afe"]
resource_name = "respawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"death", &"respawn"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6hib"]
_data = {
"RESET": SubResource("Animation_2ykcd"),
"death": SubResource("Animation_5saes"),
"patrol": SubResource("Animation_18odg"),
"respawn": SubResource("Animation_k1afe")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvyrp"]
size = Vector2(28, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jby4s"]
size = Vector2(32, 13)

[node name="Opossum" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 39
script = ExtResource("1_b5c41")
motion = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 7.5)
shape = SubResource("RectangleShape2D_km28n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
sprite_frames = SubResource("SpriteFrames_ui2a7")
animation = &"patrol"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_i6hib")
}

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_tvyrp")

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 103

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2(-1, 7.5)
shape = SubResource("RectangleShape2D_jby4s")

[node name="motion_assignation" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Respawn" type="Timer" parent="."]
wait_time = 3.0

[node name="damage_player" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="timeout" from="motion_assignation" to="." method="_on_motion_assignation_timeout"]
[connection signal="timeout" from="Respawn" to="." method="_on_respawn_timeout"]
[connection signal="timeout" from="damage_player" to="." method="_on_damage_player_timeout"]
